# hooked

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_prerequisites.sh  install.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml
core/: check-email-domain.sh  pre-commit-config.yml
core/hooks/: pre-commit
docs/: install.md
src/hooked/: __init__.py  __main__.py  __meta__.py  cli.py  hooked.py  main.py
src/hooked/commands/: __init__.py  check.py  disable.py  enable.py  install.py  self_upgrade.py  update.py
src/hooked/commands/run/: __cli__.py  __init__.py  pre_commit.py
src/hooked/data/git_hooks/: post-commit  pre-commit  pre-commit_
src/hooked/data/git_template/: post-commit
src/hooked/hooks/: __init__.py  pre_commit.py
tests/: imports_test.py  test_imports.py
tests/hooks/: pre_commit_test.py
